--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stacks/blockchain-api-client": "^0.68.0",
     "@stacks/connect-react": "^13.0.0",
     "@stacks/ui": "^7.10.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -16,8 +17,11 @@
     "jotai": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-icons": "^4.2.0",
+    "react-query": "^3.24.4",
     "react-scripts": "4.0.3",
+    "react-textarea-autosize": "^8.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
